--- a/Tool/App.config
+++ b/Tool/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="BIFramework.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="SQL_Perf_Light.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -14,6 +15,35 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <userSettings>
+        <BIFramework.Properties.Settings>
+            <setting name="target_sql_server" serializeAs="String">
+                <value>rajsqlserver2022.database.windows.net</value>
+            </setting>
+            <setting name="target_sql_db" serializeAs="String">
+                <value>Landing</value>
+            </setting>
+            <setting name="target_username" serializeAs="String">
+                <value>raj</value>
+            </setting>
+            <setting name="target_password" serializeAs="String">
+                <value>zaq1ZAQ!</value>
+            </setting>
+            <setting name="source_sql_server" serializeAs="String">
+                <value>LAPTOP-NI0AKHN4</value>
+            </setting>
+            <setting name="source_sql_db" serializeAs="String">
+                <value>sourcedb</value>
+            </setting>
+            <setting name="source_username" serializeAs="String">
+                <value>raj</value>
+            </setting>
+            <setting name="source_password" serializeAs="String">
+                <value>zaq1ZAQ!</value>
+            </setting>
+            <setting name="target_sql_db_etlframework" serializeAs="String">
+                <value>etlframework</value>
+            </setting>
+        </BIFramework.Properties.Settings>
         <SQL_Perf_Light.Properties.Settings>
             <setting name="target_sql_server" serializeAs="String">
                 <value>.</value>
