--- a/Tool/Properties/Settings.settings
+++ b/Tool/Properties/Settings.settings
@@ -1,26 +1,33 @@
 <?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SQL_Perf_Light.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="BIFramework.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="target_sql_server" Type="System.String" Scope="User">
-      <Value Profile="(Default)">.</Value>
+      <Value Profile="(Default)">rajsqlserver2022.database.windows.net</Value>
     </Setting>
     <Setting Name="target_sql_db" Type="System.String" Scope="User">
-      <Value Profile="(Default)">master</Value>
+      <Value Profile="(Default)">Landing</Value>
     </Setting>
     <Setting Name="target_username" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">raj</Value>
     </Setting>
     <Setting Name="target_password" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">zaq1ZAQ!</Value>
     </Setting>
-    <Setting Name="sqlperftoolConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=sqlperftool;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=.;Initial Catalog=sqlperftool;Integrated Security=True</Value>
+    <Setting Name="source_sql_server" Type="System.String" Scope="User">
+      <Value Profile="(Default)">LAPTOP-NI0AKHN4</Value>
+    </Setting>
+    <Setting Name="source_sql_db" Type="System.String" Scope="User">
+      <Value Profile="(Default)">sourcedb</Value>
+    </Setting>
+    <Setting Name="source_username" Type="System.String" Scope="User">
+      <Value Profile="(Default)">raj</Value>
+    </Setting>
+    <Setting Name="source_password" Type="System.String" Scope="User">
+      <Value Profile="(Default)">zaq1ZAQ!</Value>
+    </Setting>
+    <Setting Name="target_sql_db_etlframework" Type="System.String" Scope="User">
+      <Value Profile="(Default)">etlframework</Value>
     </Setting>
   </Settings>
 </SettingsFile>
